logo bug fix on Mobile-S

--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-.about_img{
-    background-image: url(img/Rectangle.png);
-}
 .portfolio_wrapper{
     grid-template-rows: repeat(2,1fr);
 }
